<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PkExaRes.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="109dp"
        android:layout_height="19dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/la_choza_nautica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnGuardar"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/descuento"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="190dp" />


    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="157dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnGuardar"
        android:layout_marginStart="27dp"
        android:text="Calcular"
        android:onClick="ShowResulto"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="303dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="157dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="190dp"
        android:layout_marginEnd="24dp"
        android:text="Guardar"
        app:layout_constraintEnd_toStartOf="@+id/btnCalcular"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="303dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnCalcular"
        android:layout_marginBottom="156dp"
        android:text="@string/subtotal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnCalcular"
        android:layout_marginBottom="114dp"
        android:text="@string/igv"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="406dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:text="@string/descuento2"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/textView4"
        android:text="@string/total"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="404dp" />

    <ListView
        android:id="@+id/listaProductos"
        android:layout_width="351dp"
        android:layout_height="138dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        tools:listitem="@layout/product_layout" />


    <RadioGroup
        android:id="@+id/RGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Arm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10" />

        <RadioButton
            android:id="@+id/Abdominal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20" />


    </RadioGroup>

    <TextView
        android:id="@+id/txtSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginStart="119dp"
        android:text="0" />

    <TextView
        android:id="@+id/txtIGV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtSubtotal"
        android:layout_alignTop="@+id/textView4"
        android:text="0" />

    <TextView
        android:id="@+id/txtDescuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="33dp"
        android:text="0" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDescuento"
        android:layout_alignTop="@+id/textView4"
        android:text="0" />

</RelativeLayout>